Correct text spacing for h1 and h3

--- a/tarot_juicer/static/css/portal.css
+++ b/tarot_juicer/static/css/portal.css
@@ -48,6 +48,7 @@ body {
   border: none;
   text-shadow: 0px 2px 3px black;
   font-size: 1.1em;
+  letter-spacing: 6px;
 }
 
 canvas {
@@ -96,9 +97,9 @@ canvas {
   padding: 0;
   margin: 0;
   color: #eeeeee;
-  letter-spacing: 2px;
   text-shadow: 0 0 30px #000155;
   line-height: 175%;
+  letter-spacing: 5px;
 }
 
 /* unvisited link */
